--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -64,6 +64,8 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".MainApp"
@@ -140,12 +142,10 @@
             android:name=".files.services.RetryDownloadJobService"
             android:exported="true"
             android:permission="android.permission.BIND_JOB_SERVICE" />
-
         <service
             android:name=".files.services.CameraUploadsSyncJobService"
-            android:permission="android.permission.BIND_JOB_SERVICE"
-            android:exported="true">
-        </service>
+            android:exported="true"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
 
         <provider
             android:name=".providers.FileContentProvider"
@@ -153,8 +153,7 @@
             android:enabled="true"
             android:exported="true"
             android:label="@string/sync_string_files"
-            android:syncable="true"
-            />
+            android:syncable="true" />
         <provider
             android:name=".providers.UsersAndGroupsSearchProvider"
             android:authorities="@string/search_suggest_authority"
@@ -276,5 +275,6 @@
             android:theme="@style/Theme.ownCloud.Fullscreen" />
         <activity android:name=".ui.activity.PatternLockActivity" />
         <activity android:name=".ui.activity.FingerprintActivity"/>
+        <activity android:name=".ui.activity.CropActivity"></activity>
     </application>
 </manifest>
