--- a/build.gradle
+++ b/build.gradle
@@ -100,8 +100,8 @@ android {
 
     defaultConfig {
 
-        manifestPlaceholders.versionCode = "20600100"
-        manifestPlaceholders.versionName = "2.7.0-beta.1"
+        manifestPlaceholders.versionCode = "20700000"
+        manifestPlaceholders.versionName = "2.7.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
