Get rid of some warnings

--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,11 @@ repositories {
 
 dependencies {
     compile 'org.apache.jackrabbit:jackrabbit-webdav:2.12.4'
-    compile 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 }
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.2'
 
     sourceSets {
         main {
