--- a/sample_client/build.gradle
+++ b/sample_client/build.gradle
@@ -5,12 +5,11 @@ repositories {
 }
 
 dependencies {
-    compile project(':')
+    implementation project(':')
 }
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.2"
 
     sourceSets {
         main {
