--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 buildscript {
     repositories {
         jcenter()
-        google()
+        maven {
+            url "https://maven.google.com"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
@@ -12,7 +14,9 @@ apply plugin: 'com.android.library'
 
 repositories {
     jcenter()
-    google()
+    maven {
+        url "https://maven.google.com"
+    }
 }
 
 dependencies {
