--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,7 @@
 buildscript {
     repositories {
         jcenter()
-        maven {
-            url "https://maven.google.com"
-        }
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
@@ -14,9 +12,7 @@ apply plugin: 'com.android.library'
 
 repositories {
     jcenter()
-    maven {
-        url "https://maven.google.com"
-    }
+    google()
 }
 
 dependencies {
