Fix Could not find com.android.tools.lint:lint-gradle:26.1.2.

--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,11 @@ buildscript {
 
 apply plugin: 'com.android.library'
 
-repositories {
-    jcenter()
-    google()
+allprojects {
+    repositories {
+        google()
+        jcenter()
+    }
 }
 
 dependencies {
