--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ allprojects {
 }
 
 dependencies {
-    compile 'org.apache.jackrabbit:jackrabbit-webdav:2.12.4'
-    compile 'com.squareup.okhttp3:okhttp:3.10.0'
+    api 'org.apache.jackrabbit:jackrabbit-webdav:2.12.4'
+    api 'com.squareup.okhttp3:okhttp:3.10.0'
 }
 
 android {
