--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,15 @@ tasks.withType(Test) {
 android {
     compileSdkVersion 26
 
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'x86_64', 'arm64-v8a', 'armeabi'
+            universalApk true
+        }
+    }
+
     defaultConfig {
 
         manifestPlaceholders.versionCode = "20700100"
