--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,7 @@ dependencies {
 tasks.withType(Test) {
     /// increased logging for tests
     testLogging {
-        events "passed", "skipped", "failed"
+        events "passed", "SKIPPED", "FAILED"
     }
 }
 
