--- a/sample_client/AndroidManifest.xml
+++ b/sample_client/AndroidManifest.xml
@@ -24,27 +24,22 @@
  -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.owncloud.android.lib.sampleclient"
-          android:versionCode="1"
-          android:versionName="1.0">
-
-    <uses-permission android:name="android.permission.INTERNET"/>
+      package="com.owncloud.android.lib.sampleclient"
+      android:versionCode="1"
+      android:versionName="1.0">
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="26"/>
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@android:style/Theme.Light.NoTitleBar">
-        <activity
-            android:name="MainActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            >
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+        <activity 	android:name="MainActivity"
+                  	android:label="@string/app_name"
+					android:screenOrientation="portrait"
+   					android:configChanges="orientation|keyboardHidden"
+                  >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
