--- a/cvscanner/build.gradle
+++ b/cvscanner/build.gradle
@@ -5,7 +5,18 @@ version = "1.3.4"
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'x86_64', 'arm64-v8a', 'armeabi'
+            universalApk true
+        }
+    }
+
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 19
@@ -41,14 +52,14 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile project(':openCVLibrary340')
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile "com.android.support:exifinterface:26.1.0"
-    compile 'com.google.android.gms:play-services-basement:11.8.0'
-    compile 'com.google.android.gms:play-services-vision:11.8.0'
-    compile 'online.devliving:mobilevision-pipeline:1.0.7'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    implementation project(':openCVLibrary340')
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation "com.android.support:exifinterface:26.1.0"
+    implementation 'com.google.android.gms:play-services-basement:11.8.0'
+    implementation 'com.google.android.gms:play-services-vision:11.8.0'
+    implementation 'online.devliving:mobilevision-pipeline:1.0.7'
 }
 
 task sourcesJar(type: Jar) {
