--- a/build.gradle
+++ b/build.gradle
@@ -14,14 +14,13 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://jitpack.io' }
     }
 }
 
 dependencies {
     api 'org.apache.jackrabbit:jackrabbit-webdav:2.12.4'
     api 'com.squareup.okhttp3:okhttp:3.10.0'
-    api 'com.gitlab.derSchabi:dav4android:dev2'
+    api project(':dav4android')
 }
 
 android {
