--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     compile 'com.afollestad.material-dialogs:core:0.8.5.9'
     compile "com.android.support:appcompat-v7:${supportLibraryVersion}"
     compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile 'com.github.sd1998:CVScanner:-SNAPSHOT'
+    compile 'com.github.sd1998:CVScanner:0dba783069'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile "com.android.support:customtabs:${supportLibraryVersion}"
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
