--- a/build.gradle
+++ b/build.gradle
@@ -42,27 +42,24 @@ configurations.all {
 
 dependencies {
     /// dependencies for app building
-    compile project(':owncloud-android-library')
-    compile "com.android.support:support-v4:${supportLibraryVersion}"
-    compile "com.android.support:design:${supportLibraryVersion}"
-    compile 'com.jakewharton:disklrucache:2.0.2'
-    compile 'com.google.android.exoplayer:exoplayer:r2.2.0'
-    compile 'com.andrognito.patternlockview:patternlockview:1.0.0'
-    compile 'com.github.chrisbanes:PhotoView:1.2.6'
-    compile 'com.afollestad.material-dialogs:core:0.8.5.9'
-    compile "com.android.support:appcompat-v7:${supportLibraryVersion}"
-    compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile 'com.github.sd1998:CVScanner:0dba783069'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile "com.android.support:customtabs:${supportLibraryVersion}"
-    compile group: 'commons-io', name: 'commons-io', version: '2.5'
+    implementation project(':owncloud-android-library')
+    implementation "com.android.support:support-v4:${supportLibraryVersion}"
+    implementation "com.android.support:design:${supportLibraryVersion}"
+    implementation 'com.jakewharton:disklrucache:2.0.2'
+    implementation 'com.google.android.exoplayer:exoplayer:r2.2.0'
+    implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
+    implementation "com.android.support:appcompat-v7:${supportLibraryVersion}"
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
+    implementation 'com.github.sd1998:CVScanner:0dba783069'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "com.android.support:customtabs:${supportLibraryVersion}"
+    implementation group: 'commons-io', name: 'commons-io', version: '2.5'
 
     /// dependencies for local unit tests
     testImplementation 'junit:junit:4.12'
-
-    /// dependencies for instrumented tests
     testImplementation 'org.mockito:mockito-core:1.10.19'
 
+    /// dependencies for instrumented tests
     // JUnit4 Rules
     androidTestImplementation 'com.android.support.test:rules:0.5'
 
@@ -99,10 +96,6 @@ tasks.withType(Test) {
 
 android {
     compileSdkVersion 26
-
-    dexOptions {
-        jumboMode true
-    }
 
     defaultConfig {
 
