--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ dependencies {
     api 'org.apache.jackrabbit:jackrabbit-webdav:2.12.4'
     api 'com.squareup.okhttp3:okhttp:3.10.0'
     api project(':dav4android')
+
+    // Used for network and database debuging
+    debugApi 'com.facebook.stetho:stetho:1.5.0'
+    debugApi 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 }
 
 android {
