--- a/build.gradle
+++ b/build.gradle
@@ -98,8 +98,8 @@ android {
 
     defaultConfig {
 
-        manifestPlaceholders.versionCode = "20700100"
-        manifestPlaceholders.versionName = "2.8.0-beta.1"
+        manifestPlaceholders.versionCode = "20800000"
+        manifestPlaceholders.versionName = "2.8.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
