--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     // Used for network and database debuging
     debugApi 'com.facebook.stetho:stetho:1.5.0'
     debugApi 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.2.51"
 }
 
 android {
