Remove index.adoc
The file doesn't contain any meaningful content, so it's been removed.
android_app's been set as the start page in its place.

--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,6 +1,6 @@
 name: android
-title: Android App
+title: ownCloud Android App Documentation
 version: master
-
+start_page: ROOT:android_app.adoc
 nav:
 - modules/ROOT/nav.adoc
