--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.2.1'
     }
 }
 
@@ -26,6 +26,10 @@ dependencies {
 
 android {
     compileSdkVersion 26
+
+    defaultConfig {
+        minSdkVersion 14
+    }
 
     sourceSets {
         main {
