apply review comment concerning targetSdkVersion
https://github.com/owncloud/android-library/pull/198#discussion_r228050760

--- a/sample_client/build.gradle
+++ b/sample_client/build.gradle
@@ -11,6 +11,11 @@ dependencies {
 android {
     compileSdkVersion 26
 
+    defaultConfig {
+        minSdkVersion 14
+        targetSdkVersion 26
+    }
+
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
