--- a/oc_jb_workaround/build.gradle
+++ b/oc_jb_workaround/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.2.1'
     }
 }
 
@@ -25,6 +25,9 @@ android {
     compileSdkVersion 26
 
     defaultConfig {
+        minSdkVersion 14
+        targetSdkVersion 26
+
         versionCode = 100040
         versionName = "1.0.40"
     }
