Rename master version back from latest to master

--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,6 +1,6 @@
 name: android
 title: Mobile app for Android
-version: latest
+version: master
 start_page: ROOT:index.adoc
 nav:
 - modules/ROOT/nav.adoc
