--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ configurations.all {
 
 dependencies {
     /// dependencies for app building
-    implementation project(':owncloud-android-library:owncloud-android-library')
+    implementation project(':owncloud-android-library:lib')
     implementation "com.android.support:support-v4:${supportLibraryVersion}"
     implementation "com.android.support:design:${supportLibraryVersion}"
     implementation 'com.jakewharton:disklrucache:2.0.2'
