--- a/owncloudApp/src/main/AndroidManifest.xml
+++ b/owncloudApp/src/main/AndroidManifest.xml
@@ -65,7 +65,7 @@
     <application
         android:name=".MainApp"
         android:icon="@mipmap/icon"
-        android:label="@string/app_name"
+        android:label="@string/app_name_buildtype"
         android:manageSpaceActivity="com.owncloud.android.ui.activity.ManageSpaceActivity"
         android:resizeableActivity="true"
         android:networkSecurityConfig="@xml/network_security_config"
@@ -151,7 +151,7 @@
 
         <provider
             android:name=".providers.FileContentProvider"
-            android:authorities="@string/authority"
+            android:authorities="@string/dynamic_authority"
             android:enabled="true"
             android:exported="true"
             android:label="@string/sync_string_files"
