Fix the component start_page setting
It is being fixed as the referenced page has been renamed.

--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,6 +1,6 @@
 name: android
 title: The Android App
 version: master
-start_page: ROOT:android_app.adoc
+start_page: ROOT:index.adoc
 nav:
 - modules/ROOT/nav.adoc
