Minor change to the playbooks

--- a/site.local.yml
+++ b/site.local.yml
@@ -1,5 +1,5 @@
 site:
-  title: ownCloud Documentation
+  title: ownCloud Android Documentation
   url: https://owncloud-docs.netlify.com/ 
 
 content:
