--- a/owncloudApp/src/main/AndroidManifest.xml
+++ b/owncloudApp/src/main/AndroidManifest.xml
@@ -67,6 +67,7 @@
         android:label="@string/app_name"
         android:manageSpaceActivity="com.owncloud.android.ui.activity.ManageSpaceActivity"
         android:resizeableActivity="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsPictureInPicture="false"
         android:theme="@style/Theme.ownCloud.Toolbar">
         <activity
