--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -110,6 +110,11 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    sourceSets {
+        androidTest.java.srcDirs += "src/test-common/java"
+        test.java.srcDirs += "src/test-common/java"
+    }
+
     lintOptions {
         abortOnError false
         disable 'MissingTranslation'
