--- a/owncloudApp/src/main/AndroidManifest.xml
+++ b/owncloudApp/src/main/AndroidManifest.xml
@@ -69,7 +69,8 @@
         android:resizeableActivity="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsPictureInPicture="false"
-        android:theme="@style/Theme.ownCloud.Toolbar">
+        android:theme="@style/Theme.ownCloud.Toolbar"
+        tools:targetApi="n">
         <activity
             android:name=".ui.activity.FileDisplayActivity"
             android:theme="@style/Theme.ownCloud.Toolbar.Drawer">
