Finish tests for OCShareRepository

--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -65,10 +65,6 @@ dependencies {
     // Room
     implementation "android.arch.persistence.room:runtime:$roomVersion"
     kapt "android.arch.persistence.room:compiler:$roomVersion"
-
-    // Coroutines
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines"
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
 }
 
 tasks.withType(Test) {
@@ -156,6 +152,10 @@ android {
     applicationVariants.all { variant ->
         def appName = System.env.OC_APP_NAME
         setOutputFileName(variant, appName, project)
+    }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
     }
 }
 
