--- a/owncloudApp/src/androidTest/AndroidManifest.xml
+++ b/owncloudApp/src/androidTest/AndroidManifest.xml
@@ -17,16 +17,8 @@
   along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<!--
-    UI Automator requires Android 4.3 (API level 18) or higher.
-
-    So this AndroidManifest will be merged with the normal one
-    (not requiring to change the minSdk) and used for UI Automator tests, and does not affect
-    the normal release/debug builds.
--->
-
 <manifest
     package="${applicationId}.test"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-sdk tools:overrideLibrary="android.support.test.uiautomator.v18"/>
+    <uses-sdk tools:overrideLibrary="android_libs.ub_uiautomator"/>
 </manifest>
