--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     // Espresso web
     androidTestImplementation 'androidx.test.espresso:espresso-web:3.1.1'
+    // Espresso intents
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
     // UIAutomator - for cross-app UI tests, and to grant screen is turned on in Espresso tests
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     // fix conflict in dependencies; see http://g.co/androidstudio/app-test-app-conflict for details
