--- a/owncloudComLibrary/build.gradle
+++ b/owncloudComLibrary/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.library'
 dependencies {
     api 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.11"
-    api 'com.gitlab.ownclouders:dav4android:oc_support'
+    api 'com.gitlab.ownclouders:dav4android:oc_support_1.0.1'
 }
 
 android {
