--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -62,8 +62,8 @@ android {
         minSdkVersion 19
         targetSdkVersion 28
 
-        versionCode = 21001000
-        versionName = "2.10.1"
+        versionCode = 21002000
+        versionName = "2.11.0-beta.1"
 
         buildConfigField "String", gitRemote, "\"" + getGitOriginRemote() + "\""
         buildConfigField "String", commitSHA1, "\"" + getLatestGitHash() + "\""
