--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
 
+    // Kotlin dependency injector
     implementation 'org.koin:koin-androidx-viewmodel:2.0.0'
 }
 
