Fix share creation UI tests using idling resources

--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -175,7 +175,7 @@ android {
 
     testOptions {
         unitTests.returnDefaultValues = true
-        animationsDisabled = false
+        animationsDisabled = true
     }
 }
 
