--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -172,7 +172,7 @@ android {
 
     testOptions {
         unitTests.returnDefaultValues = true
-        animationsDisabled = false
+        animationsDisabled = true
     }
 }
 
