--- a/owncloudComLibrary/build.gradle
+++ b/owncloudComLibrary/build.gradle
@@ -13,8 +13,8 @@ android {
         minSdkVersion 19
         targetSdkVersion 28
 
-        versionCode = 10000001
-        versionName = "1.0.1-beta.1"
+        versionCode = 10000100
+        versionName = "1.0.1"
     }
 
     lintOptions {
