--- a/owncloudApp/src/main/AndroidManifest.xml
+++ b/owncloudApp/src/main/AndroidManifest.xml
@@ -157,7 +157,7 @@
             android:syncable="true"
             />
         <provider
-            android:name=".providers.UsersAndGroupsSearchProvider"
+            android:name="com.owncloud.android.sharees.data.UsersAndGroupsSearchProvider"
             android:authorities="@string/search_suggest_authority"
             android:enabled="true"
             android:exported="false"
@@ -247,7 +247,7 @@
         <activity android:name=".ui.activity.LocalFolderPickerActivity" />
         <activity android:name=".ui.activity.UploadPathActivity" />
         <activity
-            android:name=".shares.ui.ShareActivity"
+            android:name=".shares.presentation.ShareActivity"
             android:label="@string/share_dialog_title"
             android:launchMode="singleTop"
             android:theme="@style/Theme.ownCloud"
