Start to use Mockk instead of Mockito since is better prepared to be used along with Kotlin

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 
         // Koin
         koinVersion = '2.0.1'
+        mockkVersion = '1.9.3'
 
         // Testing
         junitVersion = "4.12"
