--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,21 @@
 buildscript {
     ext {
-        // Libraries
-        kotlinVersion = '1.3.21'
+        // Android jetpack
         archLifecycleVersion = '2.0.0'
         roomVersion = '2.0.0'
+
+        // Kotlin
+        kotlinVersion = '1.3.21'
+
+        // Koin
         koinVersion = '2.0.1'
 
         // Testing
         junitVersion = "4.12"
         mockitoVersion = "2.24.0"
+
+        // Extensions
+        ktxVersion = "1.0.0"
     }
 
     repositories {
