--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     // Dependencies for unit tests
     testImplementation "junit:junit:$junitVersion"
     testImplementation "androidx.arch.core:core-testing:$archLifecycleVersion"
-    testImplementation "org.mockito:mockito-core:$mockitoVersion"
+    testImplementation "io.mockk:mockk:$mockkVersion"
 
     // Dependencies for instrumented tests
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -51,7 +51,9 @@ dependencies {
     androidTestImplementation 'androidx.annotation:annotation:1.1.0'
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
     androidTestImplementation "androidx.arch.core:core-testing:$archLifecycleVersion"
-    androidTestImplementation "org.mockito:mockito-android:$mockitoVersion"
+    androidTestImplementation ("io.mockk:mockk-android:$mockkVersion") {
+        exclude module: 'objenesis'
+    }
 
     // Image loading
     implementation('com.github.bumptech.glide:glide:4.6.1') {
