Replace the docs Makefile with a cli script
This is a port of the cli script from the docs repository, streamlined
for a single-component Antora setup. It also supports exporting the
manual to docx format as well.

--- a/.drone.yml
+++ b/.drone.yml
@@ -45,7 +45,7 @@ pipeline:
     pull: true
     commands:
     - cd docs/
-    - make pdf
+    - bin/cli -m
 
   docs-artifacts:
     image: owncloud/ubuntu:latest
