--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,9 @@ buildscript {
         junitVersion = "4.12"
         mockitoVersion = "2.24.0"
 
-        // Extensions
-        ktxVersion = "1.0.0"
+        // KTX extensions
+        ktxCoreVersion = "1.0.2"
+        ktxViewModelVersion = "2.0.0"
     }
 
     repositories {
