--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,10 @@ script:
 #  - ./gradlew :owncloudApp:installDebugAndroidTest
 # run sample instrumented unit test
 #  - adb shell am instrument -w -e debug false -e class com.owncloud.android.datamodel.OCFileUnitTest com.owncloud.android.test/android.support.test.runner.AndroidJUnitRunner
+# run the jacoco test report on Travis
+- if [ -e ./gradlew ]; then ./gradlew jacocoTestReport;else gradle jacocoTestReport;fi
+# upload the test coverage to Travis.
+- bash <(curl -s https://codecov.io/bash)
 env:
   global:
   - secure: h4Y7ZvgbvOj5T71ubRcw3Fy3KXF8qHugRFLGK3q2R9YuRsDAf8XH+Y/UiXyH8sac2QSj7Zlny1kA1DEJgwhTXs9wsAVKVJCQNTJGEvhm/4uQgPeNMzMv07Lqe8V+KUBsFH5qhfPJO357ERW0k2f2qljoLSHtHStclt7iGvFdynA=
