--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -100,8 +100,8 @@ android {
         minSdkVersion 19
         targetSdkVersion 28
 
-        versionCode = 21100101
-        versionName = "2.12-beta.1"
+        versionCode = 21200000
+        versionName = "2.12"
 
         buildConfigField "String", gitRemote, "\"" + getGitOriginRemote() + "\""
         buildConfigField "String", commitSHA1, "\"" + getLatestGitHash() + "\""
