Add room migration tests

--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -106,6 +106,12 @@ android {
         buildConfigField "String", gitRemote, "\"" + getGitOriginRemote() + "\""
         buildConfigField "String", commitSHA1, "\"" + getLatestGitHash() + "\""
 
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         // arguments to be passed to functional tests
@@ -129,6 +135,7 @@ android {
     sourceSets {
         androidTest.java.srcDirs += "src/test-common/java"
         test.java.srcDirs += "src/test-common/java"
+        androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
     }
 
     lintOptions {
