Change the text alignment to left justified
This is perhaps just me being nitpicky, but in certain instances, when
the text is full justified, it renders somewhat unprofessionally. Left
justified, however, never has this problem, so the change is being made.

--- a/docs/resources/themes/owncloud-theme.yml
+++ b/docs/resources/themes/owncloud-theme.yml
@@ -43,7 +43,7 @@ page:
   margin_outer: 0.59in
   size: A4
 base:
-  align: justify
+  align: left
   font_color: 1c1c1c
   font_family: "DejaVu Serif"
   font_size: 10.5
