--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,12 @@ buildscript {
         mockitoVersion = "2.24.0"
 
         // Extensions
-        ktxVersion = "1.0.2"
+        ktxVersion = "1.1.0"
 
         // KTX extensions
         ktxCoreVersion = "1.0.2"
         ktxViewModelVersion = "2.2.0-alpha01"
+        ktxFragmentVersion = "1.0.0"
     }
 
     repositories {
