--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     // KTX extensions, see https://developer.android.com/kotlin/ktx.html
     implementation "androidx.core:core-ktx:$ktxCoreVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$ktxViewModelVersion"
+    implementation "androidx.fragment:fragment-ktx:$ktxFragmentVersion"
 
     // Kotlin library to mock
     testImplementation "io.mockk:mockk:$mockkVersion"
