--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -3,11 +3,15 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-allopen'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'io.fabric'
 
 def commitSHA1 = 'COMMIT_SHA1'
 def gitRemote = 'GIT_REMOTE'
 
 dependencies {
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+
     // Data and domain modules
     implementation project(':owncloudDomain')
     implementation project(':owncloudData')
@@ -291,3 +295,5 @@ task decryptPrivate {
 }
 
 clean.dependsOn decryptPrivate
+
+apply plugin: 'com.google.gms.google-services'
